--- a/front-end/about/about.css
+++ b/front-end/about/about.css
@@ -4,8 +4,8 @@ html {
 }
 
 * {
-  padding: 0;
   margin: 0;
+
 }
 body {
   /* Margin bottom by footer height */
@@ -112,12 +112,13 @@ h1 {
   .lisa-speciality {
     padding-bottom: 1em;
     font-family: 'Crimson Text', serif;
-    font-size: 30px;
+    font-size: 25px;
     text-align: center;
   }
 
   .btn {
     text: center;
+    font-family: 'Crimson Text', serif;
   }
   a {
     color: white;
@@ -145,10 +146,37 @@ a:active {
 
 /* lisa description */
 
-.about-description {
-  padding: 3em;
+.description-text{
+  margin: 8em;
+  text-align: center;
+  font-family: 'Crimson Text', serif;
+  font-size: 20px;
+  padding-bottom: 3em;
 }
 
+.contact-booking {
+  padding: 10em;
+}
+
+
+.about-description {
+  padding-top: 1em;
+}
+
+
+h5 {
+  padding: 1em;
+  font-size: 1.5em;
+  text-align: center;
+  font-family: 'Crimson Text', serif;
+
+}
+
+.description-text-wait {
+  /* padding: 1em; */
+  font-size: 1.5em;
+  font-family: 'Handlee', cursive;
+}
 /* end lisa description */
 
 
@@ -159,6 +187,7 @@ a:active {
 /* footer */
 
 footer {
+
   position: absolute;
   bottom: 0;
   width: 100%;
