--- a/front-end/about/about.css
+++ b/front-end/about/about.css
@@ -59,27 +59,34 @@ section.module.parallax-1 {
   text-align: center;
 }
 
-
-
-/* about lisa */
-.headline {
-font-family: Calibri, "Helvetica", san-serif;
-line-height: 1em;
-color: black;
-font-size: 30px;
+.lisa-title {
+  padding-top: 3em;
+  font-family: 'Kaushan Script';
+  font-size: 5em;
 
 }
 
-h1:after
-{
-  content:' ';
-   display:block;
-   border:1px solid black;
+.row {
+  padding: 3em;
 }
 
+/* lisa image */
+.image-lisa {
+  width: 25em;
+  height: auto;
+
+  border-radius: 25px;
+}
+
+.description-text {
+  font-family: 'Crimson Text', serif;
+  font-size: 21px;
+  position: relative;
+  right: 7em;
+
+}
 
 .about-lisa {
-  padding: 3em;
 
 }
 
@@ -119,7 +126,7 @@ h1 {
   .btn {
     text: center;
     font-family: 'Crimson Text', serif;
-    border-radius: 0; 
+    border-radius: 0;
   }
   a {
     color: white;
@@ -147,21 +154,9 @@ h1 {
 
 /* lisa description */
 
-.description-text{
-  margin: 8em;
-  text-align: center;
-  font-family: 'Crimson Text', serif;
-  font-size: 20px;
-  padding-bottom: 3em;
-}
-
-.contact-booking {
-  padding: 10em;
-}
-
 
 .about-description {
-  padding-top: 1em;
+  padding: 5em;
 }
 
 
@@ -174,16 +169,15 @@ h5 {
 }
 
 .description-text-wait {
-  /* padding: 1em; */
-  font-size: 1.5em;
+
+  font-size: 3em;
   font-family: 'Handlee', cursive;
+  /* text-align: left; */
+  padding-left: 3px;
 }
+
+
 /* end lisa description */
-
-
-
-
-
 
 /* footer */
 
@@ -198,10 +192,6 @@ footer {
   background-color: white !important;
 
 }
-
-
-
-
 
 .footer-info {
   border-style: bold;
