--- a/front-end/test.css
+++ b/front-end/test.css
@@ -1,182 +1,68 @@
-html {
-  position: relative;
-  min-height: 100%;
-}
-
-* {
-  padding: 0;
-  margin: 0;
-}
-body {
-  /* Margin bottom by footer height */
-  margin-bottom: 60px;
-}
-
-
-/* about lisa  */
-
-.about-lisa-title{
-  text-align: center
-}
-.about-lisa-image {
-  width: 450px;
-  height: auto;
-}
-
-/* end of about lisa */
-
-
-
-
-/* ============================================================
-  SECTIONS
-============================================================ */
-section.module:last-child {
-  margin-bottom: 0;
-}
-section.module h2 {
-  margin-bottom: 40px;
-  font-family: "Roboto Slab", serif;
-  font-size: 30px;
-}
-section.module p {
-  margin-bottom: 40px;
-  font-size: 16px;
-  font-weight: 300;
-}
-section.module p:last-child {
-  margin-bottom: 0;
-}
-section.module.content {
-  padding: 40px 0;
-  background-color: rgba(207,216,220,0.5);
-}
-section.module.content:last-child {
-  margin-bottom: 60px;
-}
-section.module.parallax {
-  padding: 240px 0;
-  background-position: 0 0;
-}
-section.module.parallax h1 {
-  color: #1e1e1e;
-  font-size: 48px;
-  line-height: 1;
-  font-weight: 500;
-  text-align: center;
-  text-transform: uppercase;
-  text-shadow: 0 0 10px white;
-}
-section.module.parallax-1 {
-  background-image: url("https://www.go2convert.com/Converted/Download/981929078bab48508fdf35c28a05ad5a");
-  background-position: 50%, 0;
-  background-repeat: repeat;
-  background-attachment: fixed;
-  background-size: cover;
-  background-color: #604D53;
-  background-blend-mode: screen;
-}
-section.module.parallax-2 {
-  background-image: url("https://www.go2convert.com/Converted/Download/981929078bab48508fdf35c28a05ad5a");
-  background-position: 50% 0;
-  background-repeat: repeat;
-  background-attachment: fixed;
-  background-size: cover;
-  background-color: #604D53;
-  background-blend-mode: screen;
-}
-section.module.parallax-3 {
-  background-image: url("http://www.psd-dude.com/tutorials/resources-images/free-rain-and-raindrop-textures-for-photoshop/raindrops-window-background.jpg");
-  background-position: 50% 0;
-  background-repeat: repeat;
-  background-attachment: fixed;
-  background-size: cover;
-  background-color: #604D53;
-  background-blend-mode: screen;
-}
-
-
-
-@media (max-width: 450px) {
-    .gallery {
-        -webkit-column-count: 1;
-        -moz-column-count: 1;
-        column-count: 1;
-        -webkit-column-width: 100%;
-        -moz-column-width: 100%;
-        column-width: 100%;
-    }
-}
-
-@media (max-width: 400px) {
-    .btn.filter {
-        padding-left: 1.1rem;
-        padding-right: 1.1rem;
-    }
-}
-
-@media all and (min-width: 600px) {
-  section.module h2 {
-    font-size: 42px;
-  }
-  section.module p {
-    font-size: 20px;
-  }
-  section.module.parallax {
-    padding: 300px 0;
-  }
-  section.module.parallax h1 {
-    font-size: 96px;
-  }
-}
-
-/* services & booking  */
-
-/*  end of services & booking*/
-@media all and (min-width: 960px) {
-  section.module.parallax h1 {
-    font-size: 160px;
-  }
-}
-/*footer*/
-.footer .container-fluid {
-  height: auto;
-  background-color:  #D5C5C8;
-
-}
-.footer {
-  position: absolute;
-  bottom: 0;
+.container {
   width: 100%;
-  background-color: #FFDBDA
-  /* Set the fixed height of the footer here */
-  height: 60px;
-  line-height: 60px;
+  height: 2000px;
+  position: relative;
+  font-family: 'Trebuchet Ms';
 }
-footer .container-fluid a {
-  display: inline-block;
-  color: black;
-  padding-left: 1em;
 
+.bg {
+  background: #000000;
+  width: 100%;
+  height: 100px;
+  opacity: 0;
 }
-footer .container-fluid p {
-  display: inline-block;
-  color: black;
-  padding-left: 1em;
-  padding-right: 2em;
+
+.show {
+  opacity: 0.4;
 }
-@media(max-width: 768px){
-    .col-md-4 {
-      text-align: center;
-      line-height: 30px;
-  }
+
+.transition {
+  -webkit-transition: all 1s ease-in-out;
+	-moz-transition: all 1s ease-in-out;
+	-o-transition: all 1s ease-in-out;
+	transition: all 1s ease-in-out;
 }
-.right {
-  text-align: right;
+
+.fixed {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  z-index: 1;
 }
-.center {
+
+ul {
+  height: 200px;
+  margin: -70px auto 0 auto;
+  width: 500px;
+}
+
+li {
+  padding-top: 3em; 
+  float: left;
+  list-style: none;
+  margin: 10px 20px;
+  text-transform: uppercase;
+  letter-spacing: 4px;
+  color: #000000;
+}
+
+a {
   text-align: center;
+  font-size: 50px;
+  color: #bdbdbd;
+  font-weight: bold;
+  text-decoration: none;
+  letter-spacing: 5px;
+  text-shadow: 1px 1px 1px #949494;
+
+  position: relative;
+  z-index: 1;
+  margin: 0 auto;
+  display: block;
 }
-.left {
-  text-align: left;
+
+a:hover {
+  color: #000000;
+  text-shadow: 1px 1px 1px #C9C9C9;
 }
