--- a/front-end/landing-page.css
+++ b/front-end/landing-page.css
@@ -125,23 +125,29 @@ section.module.parallax-1 {
 /* end of testimonals */
 
 .padding {
-  padding: 18em;
+  padding: 17em;
 }
 /* contact section */
 
+.connect-section {
+  background-color: #FFAFB0;
+  padding-top: 3em;
+  padding-bottom: 3em;
+}
+
 .contact {
 
-  padding-top: 5em;
+  padding-top: 4em;
   text-align: center;
-  border-style: dashed;
+  border-style: dotted;
   border-radius: 25px;
   margin-left: auto;
   margin-right: auto;
-  width: 31em;
-  height: 40em;
-  padding-bottom: 2em;
+  width: 33em;
+  height: 38em;
+  padding-bottom: 1em;
   font-family: 'Crimson Text', serif;
-  border-color: #977E25
+  border-color: #808080
 
 }
 
@@ -293,6 +299,12 @@ footer {
   font-family: 'Crimson Text', serif;
   font-size: 1.5em;
   text-align: center;
+
+  left: -1em; 
+  position:absolute;
+  bottom:0;
+  width:100%;
+  height:60px;   /* Height of the footer */
 }
 
 
