--- a/front-end/about/about.css
+++ b/front-end/about/about.css
@@ -34,22 +34,18 @@ section.module.parallax-1 {
 .navbar-nav  {
   width: 200px;
   height: 100px;
-
-   position: absolute;
-   top: 1.7em;
-   bottom: 0;
-   left: 0;
-   right: 2em;
-   margin: auto;
-
-   font-family: 'Crimson Text', serif;
-   font-size: 25px;
+  position: absolute;
+  top: 1.7em;
+  bottom: 0;
+  left: 1em;
+  right: 1em;
+  margin: auto;
+  font-family: 'Crimson Text', serif;
+  font-size: 25px;
 }
 
 .logo-name {
   font-family: 'Kaushan Script';
-
-
 }
 
 /* landing page title */
@@ -86,9 +82,6 @@ section.module.parallax-1 {
 
 }
 
-.about-lisa {
-
-}
 
 h1 {
   text-align: center;
@@ -170,18 +163,99 @@ h5 {
 
 .description-text-wait {
 
-  font-size: 3em;
+  font-size: 2em;
   font-family: 'Handlee', cursive;
-  /* text-align: left; */
+  text-align: center;
   padding-left: 3px;
 }
+
+/* contact section */
+.connect-section {
+  background-color: #FFAFB0;
+  padding-top: 4em;
+  padding-bottom: 4em;
+  border: 1px solid #544F54;
+}
+
+.contact {
+
+  padding-top: 4em;
+  text-align: center;
+  border-style: dotted;
+  border-radius: 25px;
+  margin-left: auto;
+  margin-right: auto;
+  width: 33em;
+  height: 38em;
+  padding-bottom: 1em;
+  font-family: 'Crimson Text', serif;
+  border-color: #808080
+
+}
+
+.contact-title {
+  font-family: 'Kaushan Script';
+}
+
+.new-clients {
+  color: #977E25;
+  font-size: 20px;
+}
+
+.email {
+  color: #977E25;
+  font-size: 20px;
+}
+
+.summer-specials {
+  font-size: 20px;
+}
+
+.address {
+  font-size: 20px;
+}
+
+.btn {
+  text: center;
+  font-family: 'Crimson Text', serif;
+  border-radius: 0;
+}
+a {
+  color: white;
+  text-decoration: none !important;
+}
+a:link {
+  color: white;
+}
+
+/* visited link */
+a:visited {
+  color: black;
+}
+
+/* mouse over link */
+a:hover {
+  color: white;
+}
+
+/* selected link */
+a:active {
+  color: white;
+}
+
+.groups-buttons {
+  padding: 1em;
+  text-align: center;
+}
+
+/* end contact section  */
 
 
 /* end lisa description */
 
 /* footer */
 
-footer {
+.footer {
 
   position: absolute;
   bottom: 0;
@@ -198,6 +272,12 @@ footer {
   font-family: 'Crimson Text', serif;
   font-size: 1.5em;
   text-align: center;
+
+  left: -1em;
+  position:absolute;
+  bottom:0;
+  width:100%;
+  height:60px;   /* Height of the footer */
 }
 
 
