--- a/front-end/services/services.css
+++ b/front-end/services/services.css
@@ -10,6 +10,7 @@ html {
 body {
   /* Margin bottom by footer height */
   margin-bottom: 60px;
+  padding: 2rem 1rem;
 }
 
 html {
@@ -34,22 +35,19 @@ section.module.parallax-1 {
 .navbar-nav  {
   width: 200px;
   height: 100px;
-
-   position: absolute;
-   top: 1.7em;
-   bottom: 0;
-   left: 0;
-   right: 2em;
-   margin: auto;
-
-   font-family: 'Crimson Text', serif;
-   font-size: 25px;
+  position: absolute;
+  top: 1.7em;
+  bottom: 0;
+  left: 1em;
+  right: 1em;
+  margin: auto;
+  font-family: 'Crimson Text', serif;
+  font-size: 25px;
 }
+
 
 .logo-name {
   font-family: 'Kaushan Script';
-
-
 }
 
 /* landing page title */
@@ -68,34 +66,11 @@ section.module.parallax-1 {
 
 /* end landing page title */
 
-
-/* service area */
-
-.scissors-section {
-  padding: 3em;
-}
-
-.haircut-section  {
-  text-align: center;
-}
-
-.hair-color-section  {
-  text-align: center;
-}
-
-.treatment-section{
-  text-align: center;
-  padding-bottom: 5em; 
+.padding {
+  padding: 10em;
 }
 
 
-
-/* end of service area */
-
-/* button */
-
-
-/* end of button */
 
 /* footer */
 
@@ -110,15 +85,17 @@ footer {
 
 }
 
-
-
-
-
 .footer-info {
   border-style: bold;
   font-family: 'Crimson Text', serif;
   font-size: 1.5em;
   text-align: center;
+
+  left: -1em;
+  position:absolute;
+  bottom:0;
+  width:100%;
+  height:60px;   /* Height of the footer */
 }
 
 
