--- a/front-end/services/services.css
+++ b/front-end/services/services.css
@@ -69,9 +69,16 @@ section.module.parallax-1 {
   padding-top: 1em;
   padding-bottom: 1em;
 }
-
-
 /* end of color section */
+
+/* treatment */
+
+.treatment-title {
+  padding-top: 1em;
+  padding-bottom: 1em;
+}
+
+/* end of treatment */
 
 /* contact section */
 
